@@ -1,3 +1,5 @@
+- Refactor: Removes unused FirstTimeCandidacyDocumentsController endpoint [#qubIT-Fenix-6559]
+
 7.24.9 (11-07-2025)
 - Refactor: Remove references for CandidaciesExtensionsResources [#qubIT-Fenix-3172]
 
